--- a/src/style/toggleSwitch.css
+++ b/src/style/toggleSwitch.css
@@ -2,8 +2,9 @@
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    line-height: 2.5rem;
+    width: 250px;
+    height: 50px;
   }
   
   /* Hide default HTML checkbox */
@@ -21,7 +22,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    width: 200px;
+    width: 250px;
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -29,21 +30,22 @@
   .slider:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 25px;
+    height: 35px;
+    width: 35px;
     left: 4px;
-    bottom: 4px;
-    background-color: #2196F3;
+    bottom: 5px;
+    background-color: #17a2b8;
     -webkit-transition:.6s;
     transition: .6s;
   }
   
   input:checked + .slider {
-    background-color: #2196F3;
+    /* background-color: #2196F3; */
+    background-color: #17a2b8;
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px black;
   }
   
   input:checked + .slider:before {
@@ -56,8 +58,9 @@
   .slider.round {
     border-radius: 34px;
     border-width: 50px;
+    border: solid #17a2b8;
   }
   
   .slider.round:before {
-    border-radius: 90%;
+    border-radius: 100%;
   }
